# smartpoint-backend

./: .gitignore  Cargo.toml  Dockerfile  README_de_instalacion_primaria.txt  README_de_version_corregida.txt
.sqlx/: query-22cf5aace9dc1b6772668f085256d6e6f9412870d89b2ad6dbfbcba283ec5ec0.json  query-2c33ed25eb0008c9ccb94d0fa26beae07b33d314acddf2db4f601d23cef697da.json  query-3933097a56fce7b5ca0094f84cdc5c82495bc6cfcb4d982f2278c4291a0937cc.json  query-39848fd397916c766ac403bffaa580ce389359974ed61ac9619429ddf326eb76.json  query-59b58dcc185814711de4bf8a9161bcc62752dab3c902b8eef3981072c8861453.json  query-67a29fac2e0128c8c3ce957b6dca57d617097e7e2c9cdc647be3066e322464c0.json  query-6d0018646125399a7ddf3df857d24b6f0bfdbee82c3aa2ee018a609bfb204b5c.json  query-716f3a3f102ace5722993f2b56c9a11e0f68df146d6e35d2e5a54edd19a92cf2.json  query-76223b570efed1e86163fe31a7ed9b898db687b15abe9cdee3866c534cbdf7ec.json  query-7a36c16450a28023012f9533d0ee661844ef5fdafecc9a82ccd1c5c4edbc91a6.json  query-7e96330dd2e7c458ce43238c0acd5b600c1f887ccda52b8ff9367bca16e66eee.json  query-93b63a707c0a7adc2db865ad27a6a1745431752553f72fda1475edf49a07d26b.json  query-a0c044b90132ada02f8ef12a7b7d534c5d578cebab0fa9d9db11381435ad944c.json  query-a47128af4b1e0504555bc299926c938d3e0c20151e22d2978dd43ecf51fe5ca0.json  query-af988bc2c0003d2fd0473962bc26dfbd8f0b49db9a5f7f107d22b5a2981274cc.json  query-b02702e8d6837936e60fd46c0ed1dd41fa83430291586d5cbcc328e17d7ade98.json  query-b89262bd44a9321889f6dcf4935e6055079e4e76b939bd476af67f72cbbf095b.json  (+8 more)
migrations/: 20251126041008_nuevo_esquema.sql
src/: main.rs
